Refactor: Replace String.format