@@ -48,7 +48,7 @@ public class Message extends BaseEntity {
     }
 
     public String toString() {
-        return String.format("[%s][%s][%s]", type, name, text);
+        return "[%s][%s][%s]".formatted(type, name, text);
     }
 
 }
